--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "dotenv": "16.0.3",
     "ethereumjs-util": "7.1.5",
     "keccak256": "1.0.6",
-    "telegraf": "^4.12.2",
+    "telegraf": "4.12.2",
     "tiny-secp256k1": "2.2.1"
   },
   "devDependencies": {
@@ -28,6 +28,6 @@
     "@types/node": "18.15.10",
     "jest": "29.5.0",
     "ts-jest": "29.0.5",
-    "typescript": "5.0.2"
+    "typescript": "4.3.5"
   }
 }
