--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
-    "start": "tsc && node dist/index.js"
+    "start": "tsc && node dist/app.js"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +20,7 @@
     "ethereumjs-util": "7.1.5",
     "keccak256": "1.0.6",
     "telegraf": "4.12.2",
+    "telegraf-session-local": "^2.1.1",
     "tiny-secp256k1": "2.2.1"
   },
   "devDependencies": {
