--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
       "allowSyntheticDefaultImports": true,
       "target": "es2017",
       "sourceMap": true,
+      "strict": true,
       "outDir": "dist",
       "baseUrl": "src",
       "incremental": true,
